@@ -154,7 +154,6 @@ int command_listen(object *op, char *params);
 int command_statistics(object *pl, char *params);
 int command_fix_me(object *op, char *params);
 int command_players(object *op, char *paramss);
-int command_logs(object *op, char *params);
 int command_applymode(object *op, char *params);
 int command_bowmode(object *op, char *params);
 int command_petmode(object *op, char *params);
